--- a/package.json
+++ b/package.json
@@ -9,10 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.16",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-linear-gradient": "^12.5.0",
+    "expo-local-authentication": "~13.4.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.5.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-fingerprint-scanner": "^6.0.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.11.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-touch-id": "^4.4.1",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
