--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@react-navigation/stack": "^6.3.20",
+    "android": "^0.0.8",
+    "axios": "^1.6.0",
     "expo": "~49.0.15",
-    "expo-linear-gradient": "^12.5.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-local-authentication": "~13.4.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
